2008-12-18 Fix bug where a line with NULL data limits prevents
           subsequent data limits from calculating correctly - MGD

2008-12-17 Major documentation generator changes - MGD

2008-12-17 Applied macosx backend patch with support for path
           collections, quadmesh, etc... - JDH

2008-12-17 fix dpi-dependent behavior of text bbox and arrow in annotate
            -JJL

2008-12-17 Add group id support in artist. Two examples which
           demostrate svg filter are added. -JJL

2008-12-16 Another attempt to fix dpi-dependent behavior of Legend. -JJL

2008-12-16 Fixed dpi-dependent behavior of Legend and fancybox in Text.

2008-12-16 Added markevery property to Line2D to support subsampling
           of markers - JDH
2008-12-15 Removed mpl_data symlink in docs.  On platforms that do not
           support symlinks, these become copies, and the font files
           are large, so the distro becomes unneccessarily bloaded.
           Keeping the mpl_examples dir because relative links are
           harder for the plot directive and the *.py files are not so
           large. - JDH

2008-12-15 Fix \$ in non-math text with usetex off.  Document
           differences between usetex on/off - MGD

2008-12-15 Fix anti-aliasing when auto-snapping - MGD

2008-12-15 Fix grid lines not moving correctly during pan and zoom - MGD

2008-12-12 Preparations to eliminate maskedarray rcParams key: its
           use will now generate a warning.  Similarly, importing
           the obsolote numerix.npyma will generate a warning. - EF

2008-12-12 Added support for the numpy.histogram() weights parameter
           to the axes hist() method. Docs taken from numpy - MM

2008-12-12 Fixed warning in hist() with numpy 1.2 - MM

2008-12-12 Removed external packages: configobj and enthought.traits
           which are only required by the experimental traited config
           and are somewhat out of date. If needed, install them
           independently, see:
