@@ -4,8 +4,8 @@ import matplotlib.pyplot as plt
 styles = mpatch.BoxStyle.get_styles()
 
 figheight = (len(styles)+.5)
-fig1 = plt.figure(1, (4, figheight))
-fontsize = 0.4 * fig1.dpi
+fig1 = plt.figure(1, (4/1.5, figheight/1.5))
+fontsize = 0.3 * 72
 
 for i, (stylename, styleclass) in enumerate(styles.items()):
     fig1.text(0.5, (float(len(styles)) - 0.5 - i)/figheight, stylename,
@@ -15,3 +15,4 @@ for i, (stylename, styleclass) in enumerate(styles.items()):
               bbox=dict(boxstyle=stylename, fc="w", ec="k"))
 plt.draw()
 plt.show()
+
