@@ -1,3 +1,5 @@
+2008-12-18 add new arrow style, a line + filled triangles. -JJL
+
 2008-12-18 Fix bug where a line with NULL data limits prevents
            subsequent data limits from calculating correctly - MGD
 
